News UAT/force-app/main/default/objects/Portfolio2__c/Portfolio2__c.object-meta.xml
<CustomObject>
    <description>For use with Phoenix reports</description>
    <label>Portfolio</label>
    <nameField>
        <label>Portfolio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>