News UAT/force-app/main/default/objects/Portfolio2__c/fields/Conformed_Name__c.field-meta.xml
<CustomField>
    <fullName>Conformed_Name__c</fullName>
    <description>Phoenix Reporting</description>
    <label>Conformed Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>