News UAT/force-app/main/default/objects/Portfolio2__c/fields/Conformed_Owner__c.field-meta.xml
<CustomField>
    <fullName>Conformed_Owner__c</fullName>
    <description>Active Directory username of user</description>
    <label>Conformed Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>