News UAT/force-app/main/default/objects/Portfolio2__c/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <description>Phoenix reporting</description>
    <label>Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>