News UAT/force-app/main/default/objects/Portfolio2__c/fields/Master_Name__c.field-meta.xml
<CustomField>
    <fullName>Master_Name__c</fullName>
    <label>Master Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>