News UAT/force-app/main/default/objects/Portfolio2__c/fields/Portfolio_Code__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Code__c</fullName>
    <description>NextGen - Phoenix Reporting</description>
    <externalId>true</externalId>
    <label>Portfolio Code</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>