News UAT/force-app/main/default/objects/Portfolio2__c/fields/Priority_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Priority_Sequence__c</fullName>
    <formula>CASE(Upper(Text(Portfolio_Segment__c)), &quot;KEY&quot;, 1, &quot;CON&quot;, 2,&quot;IA&quot;,3,&quot;IMA&quot;,4,&quot;MA&quot;,5,&quot;SME&quot;,6,7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Sequence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>