News UAT/force-app/main/default/objects/Portfolio2__c/fields/Sub_Master_Name__c.field-meta.xml
<CustomField>
    <fullName>Sub_Master_Name__c</fullName>
    <description>NextGen - Phoenix Reporting</description>
    <label>Sub Master Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>