News UAT/force-app/main/default/objects/Portfolio2__c/fields/Sub_Master_Owner__c.field-meta.xml
<CustomField>
    <fullName>Sub_Master_Owner__c</fullName>
    <label>Sub Master Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>